[Patchset 1] perfetto-ui: Add analytics
Change-Id: I7a88741869638514f3ada3855cfde0cda7316efe

--- a/ui/index.html
+++ b/ui/index.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="en-us">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-137828855-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-137828855-1');
+  </script>
   <title>Perfetto UI</title>
   <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
   <link href="perfetto.css" rel="stylesheet">
